# typedb-offshoreleaks

./: README.md  migrator.py  offshoreleaks_schema.tql  preprocess.sh  pyproject.toml  requirements.txt
typedb_data_offshoreleaks/migrate_helpers/: __init__.py  migrate_helpers.py
typedb_data_offshoreleaks/preprocess/: clean_characters.sh  format_data.R  remove_bad_role_players.R  renv_restore.R  split_edges_by_type.R
