[tool.poetry]
name = "typedb-data-offshoreleaks"
version = "0.1.0"
description = "Offshoreleaks in TypeDB"
authors = ["Jon Thompson <jjt@tutanota.com>"]
license = "Open Database License, AGPL3"

[tool.poetry.dependencies]
python = "^3.8"
typedb-client = "^2.6.3"
pandas = "^1.4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
